Outliner: Remap Users crash (for ID Type Object) #93799

Closed
opened 2021-12-07 10:54:38 +01:00 by Yevgeny Makarov · 13 comments

System Information
Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20

Blender Version
Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: a791bdabd0
Broken: 3.1.0, Sun Dec 5 23:29:23 2021
Worked: ???

Short description of error
The "Remap Users" (Outliner) crashes for ID Type Object

Exact steps for others to reproduce the error

from the default statup scene:

  • Right-click on the mesh label:

remap-users-crash-1.png

  • Select the "Remap Users" in the context menu
  • set ID Type to Object
  • leave preselected Camera as is (but could change to something else as well, doesnt matter all objects should crash in the next step)
  • OK
  • crash
**System Information** Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20 **Blender Version** Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: `a791bdabd0` Broken: 3.1.0, Sun Dec 5 23:29:23 2021 Worked: ??? **Short description of error** The "Remap Users" (Outliner) crashes for `ID Type` `Object` **Exact steps for others to reproduce the error** from the default statup scene: - Right-click on the **mesh label**: ![remap-users-crash-1.png](https://archive.blender.org/developer/F12703712/remap-users-crash-1.png) - Select the "Remap Users" in the context menu - set `ID Type` to `Object` - leave preselected Camera as is (but could change to something else as well, doesnt matter all objects should crash in the next step) - OK - crash
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser self-assigned this 2021-12-07 11:39:47 +01:00
Member

So, problem seems twofold:

    • crash remapping to ID type Object (havent hunted this down, but this goes over all IDs and BKE_library_id_can_use_idtype permits a scene, so everything basically gets tried to be remapped, assume this goes bunkers somewhere)
    • multiple dialogs spawned [in the example, the second one already has the culprit ID type Object selected -- which is then likely to crash] -- this got a bit more obvious with 0e47e57eb7 but Outliner was always spawning one dialog for each marked item in the Outliner
So, problem seems twofold: - - [x] crash remapping to ID type `Object` (havent hunted this down, but this goes over all IDs and `BKE_library_id_can_use_idtype` permits a scene, so everything basically gets tried to be remapped, assume this goes bunkers somewhere) - - [x] multiple dialogs spawned [in the example, the second one already has the culprit ID type `Object` selected -- which is then likely to crash] -- this got a bit more obvious with 0e47e57eb7 but Outliner was always spawning one dialog for each marked item in the Outliner
Member

Hm, I'd say it is best to split this up in two reports.

  • the crash for ID type Object is something for #core , this stays in this report
  • (the multiple dialogs issue) would be something for #user_interface, probably involves a design decision, will create a new report for it
Hm, I'd say it is best to split this up in two reports. - [x] the crash for ID type Object is something for #core , this stays in this report - [x] (the multiple dialogs issue) would be something for #user_interface, probably involves a design decision, will create a new report for it
Philipp Oeser changed title from Outliner: Remap Users may lead to crash to Outliner: Remap Users crash (for `ID Type` `Object`) 2021-12-07 14:03:47 +01:00
Member

other report is #93814 (Outliner: Remap Users spawns multiple dialogs on top of each other)

other report is #93814 (Outliner: Remap Users spawns multiple dialogs on top of each other)
Member

Regarding the remapping crashing on object ID: can also be checked with the following (was removed in 17bd5c9d4b for some reason) which adds the entry back for objects in the Outliner context menu:

P2651: T93799_object_remap_users_snippet



diff --git a/release/scripts/startup/bl_ui/space_outliner.py b/release/scripts/startup/bl_ui/space_outliner.py
index d85538a37e0..4e05aab80bc 100644
--- a/release/scripts/startup/bl_ui/space_outliner.py
+++ b/release/scripts/startup/bl_ui/space_outliner.py
@@ -303,6 +303,7 @@ class OUTLINER_MT_object(Menu):
         layout.operator("outliner.object_operation", text="Select", icon='RESTRICT_SELECT_OFF').type = 'SELECT'
         layout.operator("outliner.object_operation", text="Select Hierarchy").type = 'SELECT_HIERARCHY'
         layout.operator("outliner.object_operation", text="Deselect").type = 'DESELECT'
+        layout.operator("outliner.object_operation", text="Remap Users").type='REMAP'
 
         layout.separator()
 
Regarding the remapping crashing on object ID: can also be checked with the following (was removed in 17bd5c9d4b for some reason) which adds the entry back for objects in the Outliner context menu: [P2651: T93799_object_remap_users_snippet](https://archive.blender.org/developer/P2651.txt) ``` diff --git a/release/scripts/startup/bl_ui/space_outliner.py b/release/scripts/startup/bl_ui/space_outliner.py index d85538a37e0..4e05aab80bc 100644 --- a/release/scripts/startup/bl_ui/space_outliner.py +++ b/release/scripts/startup/bl_ui/space_outliner.py @@ -303,6 +303,7 @@ class OUTLINER_MT_object(Menu): layout.operator("outliner.object_operation", text="Select", icon='RESTRICT_SELECT_OFF').type = 'SELECT' layout.operator("outliner.object_operation", text="Select Hierarchy").type = 'SELECT_HIERARCHY' layout.operator("outliner.object_operation", text="Deselect").type = 'DESELECT' + layout.operator("outliner.object_operation", text="Remap Users").type='REMAP' layout.separator() ```

This issue was referenced by 7c9e409985

This issue was referenced by 7c9e4099854a4fc8eab4db97173c1aacd25f9e08
Philipp Oeser removed their assignment 2021-12-08 13:53:43 +01:00
Member

Added subscribers: @mont29, @brecht

Added subscribers: @mont29, @brecht
Member

@brecht, @mont29: Hm, looks like remapping to another object is just not valid anymore [possibly because of the introduction of (scene) collections]? In 2.79, we could end up with two [equal] objects being linked to the same scene, guess this is just not possible/allowed anymore. Maybe this type of object usage can be steered around, but afraid this will take me much longer than @mont29?

CLOG_FATAL(&LOG, "Object '%s' from collection '%s' has no entry in view layer's object bases cache"
1   __pthread_kill_implementation                 pthread_kill.c       44   0x7ffff78704ac 
2   __pthread_kill_internal                       pthread_kill.c       78   0x7ffff7870513 
3   __GI_raise                                    raise.c              26   0x7ffff7823696 
4   __GI_abort                                    abort.c              79   0x7ffff780d7f3 
5   clg_ctx_fatal_action                          clog.c               386  0x599b310      
6   CLG_logf                                      clog.c               555  0x599b9be      
7   view_layer_objects_base_cache_validate        layer.c              1140 0x3ab1340      
8   view_layer_objects_base_cache_validate        layer.c              1153 0x3ab1388      
9   BKE_layer_collection_sync                     layer.c              1244 0x3ab1618      
10  BKE_scene_collection_sync                     layer.c              1267 0x3ab16e3      
11  BKE_main_collection_sync                      layer.c              1283 0x3ab172e      
12  BKE_main_collection_sync_remap                layer.c              1319 0x3ab18d7      
13  libblock_remap_data_postprocess_object_update lib_remap.c          286  0x3ac4775      
14  BKE_libblock_remap_locked                     lib_remap.c          521  0x3ac4fb5      
15  BKE_libblock_remap                            lib_remap.c          559  0x3ac5091      
16  outliner_id_remap_exec                        outliner_edit.c      608  0x54f97c1      
17  wm_operator_exec                              wm_event_system.c    1047 0x4111102      
18  WM_operator_call_ex                           wm_event_system.c    1092 0x41112f7      
19  dialog_exec_cb                                wm_operators.c       1425 0x4138188      
20  ui_apply_but_funcs_after                      interface_handlers.c 1048 0x531b3ef  

If this is related to the "object-used-by-scene" vs. "object-used-by-collection" fact, then we have semi-related cases in:

  • #92978 ("Make Single User" does not unlink object from other scenes when creating Scene using "Linked Copy")
  • #90472 (Make Links > Objects to Scene: Does not changes origing point color. We have no visual indication!)
    (and I think the whole workflow could need some rethinking)
@brecht, @mont29: Hm, looks like remapping to another object is just not valid anymore [possibly because of the introduction of (scene) collections]? In 2.79, we could end up with two [equal] objects being linked to the same scene, guess this is just not possible/allowed anymore. Maybe this type of object usage can be steered around, but afraid this will take me much longer than @mont29? ``` CLOG_FATAL(&LOG, "Object '%s' from collection '%s' has no entry in view layer's object bases cache" ``` ``` 1 __pthread_kill_implementation pthread_kill.c 44 0x7ffff78704ac 2 __pthread_kill_internal pthread_kill.c 78 0x7ffff7870513 3 __GI_raise raise.c 26 0x7ffff7823696 4 __GI_abort abort.c 79 0x7ffff780d7f3 5 clg_ctx_fatal_action clog.c 386 0x599b310 6 CLG_logf clog.c 555 0x599b9be 7 view_layer_objects_base_cache_validate layer.c 1140 0x3ab1340 8 view_layer_objects_base_cache_validate layer.c 1153 0x3ab1388 9 BKE_layer_collection_sync layer.c 1244 0x3ab1618 10 BKE_scene_collection_sync layer.c 1267 0x3ab16e3 11 BKE_main_collection_sync layer.c 1283 0x3ab172e 12 BKE_main_collection_sync_remap layer.c 1319 0x3ab18d7 13 libblock_remap_data_postprocess_object_update lib_remap.c 286 0x3ac4775 14 BKE_libblock_remap_locked lib_remap.c 521 0x3ac4fb5 15 BKE_libblock_remap lib_remap.c 559 0x3ac5091 16 outliner_id_remap_exec outliner_edit.c 608 0x54f97c1 17 wm_operator_exec wm_event_system.c 1047 0x4111102 18 WM_operator_call_ex wm_event_system.c 1092 0x41112f7 19 dialog_exec_cb wm_operators.c 1425 0x4138188 20 ui_apply_but_funcs_after interface_handlers.c 1048 0x531b3ef ``` If this is related to the "object-used-by-scene" vs. "object-used-by-collection" fact, then we have semi-related cases in: - #92978 ("Make Single User" does not unlink object from other scenes when creating Scene using "Linked Copy") - #90472 (Make Links > Objects to Scene: Does not changes origing point color. We have no visual indication!) (and I think the whole workflow could need some rethinking)

This issue was referenced by 8d3e57f338

This issue was referenced by 8d3e57f338234995c30ae702fff62ed6229f762e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-12-22 17:53:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93799
No description provided.